--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
     'Droid Sans',
     'Helvetica Neue',
     sans-serif;
+  background-color: #FAFAFA;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
