--- a/src/containers/Header.module.css
+++ b/src/containers/Header.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: Monsterrat;
+  font-family: Monsterrat, sans-serif;
 }
 
 .headerContainer {
@@ -26,7 +26,6 @@
 }
 
 .header .link {
-  color: #121212;
   cursor: pointer;
   text-transform: uppercase;
   font-size: 13px;
